[package]
name = "nova-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-scotia = "0.5.0"
nova-snark = "0.23.0"
serde_cbor = "0.10"
serde_json = "1.0.103"
serde = "1.0"
clap = {version = "4.3.19", features = ["derive"]}
